Resolved Spacings

--- a/css/style.css
+++ b/css/style.css
@@ -3585,3 +3585,7 @@ label {
 .info-box-content{
   margin-bottom: 10px;
 }
+
+.pad-down{
+  margin-bottom: 20px;
+}
